# aladdinsdk-plugin-builder

./: .gitignore  CONTRIBUTING.md  README.md  asdk_agraph_plugin_builder.py  pyproject.toml  setup.cfg
.github/workflows/: build-publish.yml  builder-quality-check.yml  quality-check.yml
resources/templates/: api_registry.py  pyproject.toml
