[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aladdinsdk-plugin-builder"
version = "0.0.1a1"
authors = [
  { name="Vedant Naik", email="naik.vedant@gmail.com" },
]
description = "AladdinSDK Plugin Builder"
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
aladdinsdk = ["**/*.json"]
