[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = '{{pkg_name}}'
version = '{{pkg_version}}'
authors = []
description = "AladdinSDK Plugin - {{pkg_name}}"
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
{{pkg_name}} = ["**/*.json", "domain_apis_list.json"]
